--- a/index.html
+++ b/index.html
@@ -560,7 +560,9 @@
             </div>
         </div>
     </div>
-    <div id="tooltip" style="width: auto; left: -91px; top: -91px; visibility: hidden;"></div>
+    <script type="text/javascript">
+    alert("This is A Demo website LOGIN and REGISTER do NOT work!!!");
+    </script>
 </body>
 
 </html>
